tests/valid/valid_identifiers_quoted.csl
config QuotedIds {
  `simple-key`: number;
  R`TAG(complex-key)TAG`: string;
}
