tests/invalid/invalid_raw_identifier_delimiter_length.csl
config InvalidRawIdDelim {
  R`ABCDEFGHIJKLMNOPQ(key)ABCDEFGHIJKLMNOPQ`: number;
}
